// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Router routes to results when given route /r 1`] = `
<div>
  <div
    id="mockResultsPage"
  >
    mockResultsPage
  </div>
</div>
`;

exports[`App Router routes to search page by default 1`] = `
<div>
  <div
    id="mockSearchPage"
  >
    mockSearchPage
  </div>
</div>
`;
